# Sentiment_Analysis

./: .gitignore  Makefile  README.md  hello.py  pyproject.toml
docs/: Makefile  conf.py  index.rst  make.bat
notebooks/: data.csv  exp1.ipynb  exp2_bow_vs_tfidf.py  exp3_lor_bow_hp.py
