[project]
name = "yt-comments-sentiment-analysis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cookiecutter>=2.6.0",
    "dagshub>=0.5.9",
    "ipykernel>=6.29.5",
    "mlflow>=2.22.0",
    "nltk>=3.9.1",
    "numpi>=0.7.3",
    "numpy>=2.2.5",
    "pandas>=2.2.3",
    "scikit-learn>=1.6.1",
    "setuptools>=80.4.0",
]
